Views: Add a11y information for IconLabelBubbleView and LocationIconView.

IconLabelBubbleView is a View for displaying an icon + label; LocationIconView
specifically is the icon + text shown on the left on the Omnibox URL (typically
when a site is deemed to be secure). Neither of these classes have any
accessibility information set on them, despite LocationIconView being a
focusable and clickable target. This change adds a11y information to both.

BUG=668930

Review-Url: https://codereview.chromium.org/2530353002
Cr-Commit-Position: refs/heads/master@{#436832}

Former-commit-id: 2d053e7da4da085c320a6a821377f429523afd63